Fix package name. Ignore .log files

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "Data Visualization Capstone Group",
-  "name": "Data Visualization Capstone",
+  "name": "web",
   "version": "0.3.2",
   "homepage": "https://github.com/data-visualization-capstone",
   "licenses": {
